Add accuracy and f1-score calculation

--- a/Assignment 2/Assignment 2.ipynb
+++ b/Assignment 2/Assignment 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 50,
    "outputs": [],
    "source": [
     "from collections import Counter\n",
@@ -24,15 +24,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-27T13:39:01.768508700Z",
-     "start_time": "2023-11-27T13:39:01.758972200Z"
+     "end_time": "2023-11-27T17:25:16.980883500Z",
+     "start_time": "2023-11-27T17:25:16.746837600Z"
     }
    },
    "id": "25799c9a77429e34"
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 51,
    "outputs": [],
    "source": [
     "def split_data(doc_file, train_split=0.8):\n",
@@ -50,21 +50,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-27T13:39:01.810201500Z",
-     "start_time": "2023-11-27T13:39:01.771531900Z"
+     "end_time": "2023-11-27T17:25:16.986717900Z",
+     "start_time": "2023-11-27T17:25:16.776623300Z"
     }
    },
    "id": "74cb4576eb34d477"
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 52,
    "outputs": [
     {
      "data": {
-      "text/plain": "([('scripter', {'pos': -13.558406832566469, 'neg': -12.857496383721145}),\n  ('total', {'pos': -9.569422786002194, 'neg': -8.788469629483334}),\n  ('cued', {'pos': -13.558406832566469, 'neg': -12.857496383721145}),\n  ('28-300', {'pos': -12.865259652006523, 'neg': -13.55064356428109}),\n  ('mp3.', {'pos': -12.459794543898358, 'neg': -11.604733415225777})],\n {'pos': -0.6761896870922498, 'neg': -0.7103971982200179})"
+      "text/plain": "([('seeks', {'pos': -10.91934950295121, 'neg': -11.604733415225777}),\n  ('curry', {'pos': -12.459794543898358, 'neg': -12.857496383721145}),\n  ('seriousness', {'pos': -12.459794543898358, 'neg': -11.758884095053036}),\n  ('6-month', {'pos': -13.558406832566469, 'neg': -12.857496383721145}),\n  ('37:4', {'pos': -13.558406832566469, 'neg': -12.857496383721145})],\n {'pos': -0.6761896870922498, 'neg': -0.7103971982200179})"
      },
-     "execution_count": 27,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,15 +127,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-27T13:39:02.633305600Z",
-     "start_time": "2023-11-27T13:39:01.787070600Z"
+     "end_time": "2023-11-27T17:25:18.109437100Z",
+     "start_time": "2023-11-27T17:25:16.791687300Z"
     }
    },
    "id": "650f7e1ff48a8e9e"
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 53,
    "outputs": [],
    "source": [
     "def score_doc_label(document, label, model, log_prob_class):\n",
@@ -158,21 +158,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-27T13:39:02.648084100Z",
-     "start_time": "2023-11-27T13:39:02.636791200Z"
+     "end_time": "2023-11-27T17:25:18.151131800Z",
+     "start_time": "2023-11-27T17:25:18.115667700Z"
     }
    },
    "id": "549f2794903a9fe3"
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 54,
    "outputs": [
     {
      "data": {
       "text/plain": "(0.0013212141496043825,\n 0.0005283997934747295,\n 0.00017230368700664423,\n 0.0004547440646873432,\n -12.807858361140351,\n -13.486891735775352)"
      },
-     "execution_count": 29,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,15 +199,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-27T13:39:02.705557Z",
-     "start_time": "2023-11-27T13:39:02.652096500Z"
+     "end_time": "2023-11-27T17:25:18.172766300Z",
+     "start_time": "2023-11-27T17:25:18.132614100Z"
     }
    },
    "id": "1f9021e224ce387e"
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 55,
    "outputs": [],
    "source": [
     "def classify_nb(document, model, log_prob_class):\n",
@@ -227,21 +227,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-27T13:39:02.714133900Z",
-     "start_time": "2023-11-27T13:39:02.664623100Z"
+     "end_time": "2023-11-27T17:25:18.173738900Z",
+     "start_time": "2023-11-27T17:25:18.160182200Z"
     }
    },
    "id": "ece68b5805521e7f"
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 56,
    "outputs": [
     {
      "data": {
       "text/plain": "[(['great'], 'pos'),\n (['bad'], 'neg'),\n (['amazing'], 'pos'),\n (['terrible'], 'neg'),\n (['a', 'top-quality', 'performance'], 'pos')]"
      },
-     "execution_count": 31,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,11 +261,152 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-27T13:39:02.715121600Z",
-     "start_time": "2023-11-27T13:39:02.682430200Z"
+     "end_time": "2023-11-27T17:25:18.252715500Z",
+     "start_time": "2023-11-27T17:25:18.180264500Z"
     }
    },
    "id": "6571dc86a2f79bb6"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "outputs": [],
+   "source": [
+    "def classify_documents(docs, model, log_prob_class):\n",
+    "    \"\"\"\n",
+    "    Classifies documents in the provided collection.\n",
+    "    \"\"\"\n",
+    "    predictions = []\n",
+    "    for doc in docs:\n",
+    "        prediction = classify_nb(doc, model, log_prob_class)\n",
+    "        predictions.append(prediction)\n",
+    "    return predictions"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-27T17:25:18.253719200Z",
+     "start_time": "2023-11-27T17:25:18.194829400Z"
+    }
+   },
+   "id": "9ebe9a960a606f2a"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "outputs": [],
+   "source": [
+    "def accuracy(true_labels, guessed_labels):\n",
+    "    \"\"\"\n",
+    "    Computes the accuracy of the classifier.\n",
+    "    \"\"\"\n",
+    "    correct_count = 0\n",
+    "\n",
+    "    for t, g in zip(true_labels, guessed_labels):\n",
+    "        if t == g:\n",
+    "            correct_count += 1\n",
+    "    \n",
+    "    acc = correct_count / len(true_labels)\n",
+    "    return acc"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-27T17:25:18.254713700Z",
+     "start_time": "2023-11-27T17:25:18.203364900Z"
+    }
+   },
+   "id": "6f7407e97440fe9"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "outputs": [],
+   "source": [
+    "def precision_recall_f1(true_labels, predicted_labels):\n",
+    "    \"\"\"\n",
+    "    Compute precision, recall, and F1 score.\n",
+    "    \"\"\"\n",
+    "    # Initialize variables\n",
+    "    true_positives, false_positives, false_negatives = 0, 0, 0\n",
+    "\n",
+    "    # Counting true positives, false positives, and false negatives\n",
+    "    for true, pred in zip(true_labels, predicted_labels):\n",
+    "        if true == 'pos' and pred == 'pos':\n",
+    "            true_positives += 1\n",
+    "        elif true == 'neg' and pred == 'pos':\n",
+    "            false_positives += 1\n",
+    "        elif true == 'pos' and pred == 'neg':\n",
+    "            false_negatives += 1\n",
+    "\n",
+    "    # Calculating precision, recall, and F1 score\n",
+    "    precision, recall, f1 = 0, 0, 0\n",
+    "\n",
+    "    if true_positives + false_positives > 0:\n",
+    "        precision = true_positives / (true_positives + false_positives)\n",
+    "\n",
+    "    if true_positives + false_negatives > 0:\n",
+    "        recall = true_positives / (true_positives + false_negatives)\n",
+    "\n",
+    "    if precision + recall > 0:\n",
+    "        f1 = 2 * (precision * recall) / (precision + recall)\n",
+    "\n",
+    "    return precision, recall, f1"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-27T17:25:18.255726300Z",
+     "start_time": "2023-11-27T17:25:18.225111900Z"
+    }
+   },
+   "id": "6f1edf91b0fa4af8"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.8153587914393622 \n",
+      "Precision: 0.8237965485921889\n",
+      "Recall: 0.7866435385949696\n",
+      "F1 score: 0.8047914818101153\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculating the accuracy, precision, recall, and F1 score\n",
+    "predicted_labels = classify_documents(val_docs, model, log_prob_class)\n",
+    "accuracy_result = accuracy(val_labels, predicted_labels)\n",
+    "precision, recall, f1_score = precision_recall_f1(val_labels, predicted_labels)\n",
+    "\n",
+    "print(f\"Accuracy: {accuracy_result} \\nPrecision: {precision}\\nRecall: {recall}\\nF1 score: {f1_score}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-27T17:25:18.536295900Z",
+     "start_time": "2023-11-27T17:25:18.237650500Z"
+    }
+   },
+   "id": "c693470fd9e199ef"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-27T17:25:18.548368400Z",
+     "start_time": "2023-11-27T17:25:18.534292400Z"
+    }
+   },
+   "id": "86390cd10eba3b46"
   }
  ],
  "metadata": {
