--- a/Assignment 2/Assignment 2.ipynb
+++ b/Assignment 2/Assignment 2.ipynb
@@ -2,41 +2,49 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "54579eafefd55407",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "# Assignment 2: Naive Bayes Classifier\n",
     "## Group Members:\n",
     "* ### Nils Dunlop, e-mail: gusdunlni@student.gu.se\n",
     "* ### Francisco Alejandro Erazo Piza, e-mail: guserafr@student.gu.se\n",
     "* ### Chukwudumebi Ubogu, e-mail: gusuboch@student.gu.se"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "54579eafefd55407"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "1c46f3b8c5fc333b",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "## Preparatory remarks"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "1c46f3b8c5fc333b"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Frequency-counting in Python."
-   ],
+   "id": "c75c46eb991b4feb",
    "metadata": {
     "collapsed": false
    },
-   "id": "c75c46eb991b4feb"
+   "source": [
+    "### Frequency-counting in Python."
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 125,
+   "id": "25799c9a77429e34",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-28T11:43:44.775039100Z",
+     "start_time": "2023-11-28T11:43:44.481789400Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "from collections import Counter\n",
@@ -54,29 +62,29 @@
     "            docs.append(words[3:])\n",
     "            labels.append(words[1])\n",
     "    return docs, labels"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-28T11:43:44.775039100Z",
-     "start_time": "2023-11-28T11:43:44.481789400Z"
-    }
-   },
-   "id": "25799c9a77429e34"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Reading the review data"
-   ],
+   "id": "432d8b647ce746b2",
    "metadata": {
     "collapsed": false
    },
-   "id": "432d8b647ce746b2"
+   "source": [
+    "### Reading the review data"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 126,
+   "id": "74cb4576eb34d477",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-28T11:43:44.873047400Z",
+     "start_time": "2023-11-28T11:43:44.495158700Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def split_data(doc_file, train_split=0.8):\n",
@@ -90,33 +98,40 @@
     "    val_docs = all_docs[split_point:]\n",
     "    val_labels = all_labels[split_point:]\n",
     "    return train_docs, train_labels, val_docs, val_labels, all_docs, all_labels"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-28T11:43:44.873047400Z",
-     "start_time": "2023-11-28T11:43:44.495158700Z"
-    }
-   },
-   "id": "74cb4576eb34d477"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Estimating parameters for the Naive Bayes classifier"
-   ],
+   "id": "7c55fbd09ecd4e33",
    "metadata": {
     "collapsed": false
    },
-   "id": "7c55fbd09ecd4e33"
+   "source": [
+    "### Estimating parameters for the Naive Bayes classifier"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 127,
+   "id": "650f7e1ff48a8e9e",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-28T11:43:45.535322100Z",
+     "start_time": "2023-11-28T11:43:44.513959900Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "([('seeks', {'pos': -10.91934950295121, 'neg': -11.604733415225777}),\n  ('curry', {'pos': -12.459794543898358, 'neg': -12.857496383721145}),\n  ('seriousness', {'pos': -12.459794543898358, 'neg': -11.758884095053036}),\n  ('6-month', {'pos': -13.558406832566469, 'neg': -12.857496383721145}),\n  ('37:4', {'pos': -13.558406832566469, 'neg': -12.857496383721145})],\n {'pos': -0.6761896870922498, 'neg': -0.7103971982200179})"
+      "text/plain": [
+       "([('seeks', {'pos': -10.91934950295121, 'neg': -11.604733415225777}),\n",
+       "  ('curry', {'pos': -12.459794543898358, 'neg': -12.857496383721145}),\n",
+       "  ('seriousness', {'pos': -12.459794543898358, 'neg': -11.758884095053036}),\n",
+       "  ('6-month', {'pos': -13.558406832566469, 'neg': -12.857496383721145}),\n",
+       "  ('37:4', {'pos': -13.558406832566469, 'neg': -12.857496383721145})],\n",
+       " {'pos': -0.6761896870922498, 'neg': -0.7103971982200179})"
+      ]
      },
      "execution_count": 127,
      "metadata": {},
@@ -177,29 +192,29 @@
     "\n",
     "# Printing 5 instances of the model for verification\n",
     "list(model.items())[:5], log_prob_class"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-28T11:43:45.535322100Z",
-     "start_time": "2023-11-28T11:43:44.513959900Z"
-    }
-   },
-   "id": "650f7e1ff48a8e9e"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Classifying new documents"
-   ],
+   "id": "2f892f381087659e",
    "metadata": {
     "collapsed": false
    },
-   "id": "2f892f381087659e"
+   "source": [
+    "### Classifying new documents"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 128,
+   "id": "549f2794903a9fe3",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-28T11:43:45.551407100Z",
+     "start_time": "2023-11-28T11:43:45.525978600Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def score_doc_label(document, label, model, log_prob_class):\n",
@@ -218,23 +233,30 @@
     "            pass\n",
     "\n",
     "    return log_prob"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-28T11:43:45.551407100Z",
-     "start_time": "2023-11-28T11:43:45.525978600Z"
-    }
-   },
-   "id": "549f2794903a9fe3"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 129,
+   "id": "1f9021e224ce387e",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-28T11:43:45.552410200Z",
+     "start_time": "2023-11-28T11:43:45.541857100Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "(0.0013212141496043825,\n 0.0005283997934747295,\n 0.00017230368700664423,\n 0.0004547440646873432,\n -12.807858361140351,\n -13.486891735775352)"
+      "text/plain": [
+       "(0.0013212141496043825,\n",
+       " 0.0005283997934747295,\n",
+       " 0.00017230368700664423,\n",
+       " 0.0004547440646873432,\n",
+       " -12.807858361140351,\n",
+       " -13.486891735775352)"
+      ]
      },
      "execution_count": 129,
      "metadata": {},
@@ -259,19 +281,19 @@
     "log_prob_neg_doc = score_doc_label(['a', 'top-quality', 'performance'], \"neg\", model, log_prob_class)\n",
     "\n",
     "prob_pos_great, prob_neg_great, prob_pos_bad, prob_neg_bad, log_prob_pos_doc, log_prob_neg_doc"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-28T11:43:45.552410200Z",
-     "start_time": "2023-11-28T11:43:45.541857100Z"
-    }
-   },
-   "id": "1f9021e224ce387e"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 130,
+   "id": "ece68b5805521e7f",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-28T11:43:45.625536400Z",
+     "start_time": "2023-11-28T11:43:45.557407Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def classify_nb(document, model, log_prob_class):\n",
@@ -287,23 +309,29 @@
     "        return \"pos\"\n",
     "    else:\n",
     "        return \"neg\""
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-28T11:43:45.625536400Z",
-     "start_time": "2023-11-28T11:43:45.557407Z"
-    }
-   },
-   "id": "ece68b5805521e7f"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 131,
+   "id": "6571dc86a2f79bb6",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-28T11:43:45.640066900Z",
+     "start_time": "2023-11-28T11:43:45.572453300Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
-      "text/plain": "[(['great'], 'pos'),\n (['bad'], 'neg'),\n (['amazing'], 'pos'),\n (['terrible'], 'neg'),\n (['a', 'top-quality', 'performance'], 'pos')]"
+      "text/plain": [
+       "[(['great'], 'pos'),\n",
+       " (['bad'], 'neg'),\n",
+       " (['amazing'], 'pos'),\n",
+       " (['terrible'], 'neg'),\n",
+       " (['a', 'top-quality', 'performance'], 'pos')]"
+      ]
      },
      "execution_count": 131,
      "metadata": {},
@@ -321,29 +349,29 @@
     "    classified_docs.append((doc, classification))\n",
     "\n",
     "classified_docs"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-28T11:43:45.640066900Z",
-     "start_time": "2023-11-28T11:43:45.572453300Z"
-    }
-   },
-   "id": "6571dc86a2f79bb6"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Evaluating the classifier"
-   ],
+   "id": "3ac9440a37b0840f",
    "metadata": {
     "collapsed": false
    },
-   "id": "3ac9440a37b0840f"
+   "source": [
+    "### Evaluating the classifier"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 132,
+   "id": "9ebe9a960a606f2a",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-28T11:43:45.642049200Z",
+     "start_time": "2023-11-28T11:43:45.585977100Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def classify_documents(docs, model, log_prob_class):\n",
@@ -355,19 +383,19 @@
     "        prediction = classify_nb(doc, model, log_prob_class)\n",
     "        predictions.append(prediction)\n",
     "    return predictions"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-28T11:43:45.642049200Z",
-     "start_time": "2023-11-28T11:43:45.585977100Z"
-    }
-   },
-   "id": "9ebe9a960a606f2a"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 133,
+   "id": "6f7407e97440fe9",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-28T11:43:45.643044600Z",
+     "start_time": "2023-11-28T11:43:45.604005800Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def accuracy(true_labels, guessed_labels):\n",
@@ -382,19 +410,19 @@
     "    \n",
     "    acc = correct_count / len(true_labels)\n",
     "    return acc"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-28T11:43:45.643044600Z",
-     "start_time": "2023-11-28T11:43:45.604005800Z"
-    }
-   },
-   "id": "6f7407e97440fe9"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 134,
+   "id": "6f1edf91b0fa4af8",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-28T11:43:45.644551800Z",
+     "start_time": "2023-11-28T11:43:45.618060100Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def precision_recall_f1(true_labels, predicted_labels):\n",
@@ -426,19 +454,19 @@
     "        f1 = 2 * (precision * recall) / (precision + recall)\n",
     "\n",
     "    return precision, recall, f1"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-28T11:43:45.644551800Z",
-     "start_time": "2023-11-28T11:43:45.618060100Z"
-    }
-   },
-   "id": "6f1edf91b0fa4af8"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 135,
+   "id": "c693470fd9e199ef",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-28T11:43:45.835625800Z",
+     "start_time": "2023-11-28T11:43:45.643044600Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -459,18 +487,14 @@
     "precision, recall, f1_score = precision_recall_f1(val_labels, predicted_labels)\n",
     "\n",
     "print(f\"\\nAccuracy: {accuracy_result} \\nPrecision: {precision}\\nRecall: {recall}\\nF1 score: {f1_score}\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-28T11:43:45.835625800Z",
-     "start_time": "2023-11-28T11:43:45.643044600Z"
-    }
-   },
-   "id": "c693470fd9e199ef"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "11e1cbab3ac8e1e5",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "### What is the difference between F1 score and accuracy?\n",
     "\n",
@@ -479,14 +503,14 @@
     "\n",
     "**Precision**\n",
     "F1 score is a slightly more nuanced metric. It is the harmonic mean of precision and recall. Precision is the ratio of true positives to all positive predictions. Recall is the ratio of true positives to all actual positive instances. F1 score balances precision and recall, providing a more holistic view of how well the model is performing especially when the classes are imbalanced."
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "11e1cbab3ac8e1e5"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "ab1eea5da76cf058",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "### Error Analysis\n",
     "We analyzed the first 10 documents and their corresponding prediction. Below you will see three instances which were harder to predict: \n",
@@ -505,25 +529,29 @@
     "* Analysis: The negative prediction aligns with the strong criticism expressed in the document.\n",
     "\n",
     "Overall the classifier seemed to predict well the sentiment expressed in the first 10 documents. The more challenging cases for the classifier could be the ones with mixed sentiments or when the sentiment is expressed in a not so straightforward way such as the Madame Bovary document."
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "ab1eea5da76cf058"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Cross-validation"
-   ],
+   "id": "83a06e0e48484bdb",
    "metadata": {
     "collapsed": false
    },
-   "id": "83a06e0e48484bdb"
+   "source": [
+    "### Cross-validation"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 136,
+   "id": "50aed86d493a1946",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-28T11:43:45.875609700Z",
+     "start_time": "2023-11-28T11:43:45.838973500Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def cross_validation_10_fold(all_docs, all_labels, N=10):\n",
@@ -545,19 +573,19 @@
     "        accuracy_scores.append(accuracy(val_labels_fold, predicted_labels))\n",
     "\n",
     "    return sum(accuracy_scores) / N"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-28T11:43:45.875609700Z",
-     "start_time": "2023-11-28T11:43:45.838973500Z"
-    }
-   },
-   "id": "50aed86d493a1946"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 137,
+   "id": "8218746010ae360d",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-28T11:43:45.887122600Z",
+     "start_time": "2023-11-28T11:43:45.849479200Z"
+    },
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "def cross_validation_loocv(all_docs, all_labels, max_iterations=100):\n",
@@ -576,19 +604,19 @@
     "        accuracy_scores.append(accuracy(val_labels_fold, predicted_labels))\n",
     "\n",
     "    return sum(accuracy_scores) / len(accuracy_scores)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-28T11:43:45.887122600Z",
-     "start_time": "2023-11-28T11:43:45.849479200Z"
-    }
-   },
-   "id": "8218746010ae360d"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 138,
+   "id": "54db05022a6506a8",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-11-28T11:44:46.366370900Z",
+     "start_time": "2023-11-28T11:43:45.867017800Z"
+    },
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -607,49 +635,49 @@
     "# LOOCV\n",
     "avg_accuracy_loocv = cross_validation_loocv(all_docs, all_labels, max_iterations=100)\n",
     "print(\"Average Accuracy (LOOCV, first 100 iterations):\", avg_accuracy_loocv)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-28T11:44:46.366370900Z",
-     "start_time": "2023-11-28T11:43:45.867017800Z"
-    }
-   },
-   "id": "54db05022a6506a8"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "54036a807a14e073",
+   "metadata": {
+    "collapsed": false
+   },
    "source": [
     "### Cross-validation results\n",
     "* **10-Fold Cross-Validation**: Achieved an average accuracy of about 0.808. This method offers a balanced evaluation, as it trains and validates across different subsets of the data resulting in a consistent classifier performance.\n",
     "* **LOOCV (100 Iterations)**: Showed a slightly higher average accuracy of 0.83. By training on nearly all available data for each test case, this method offers a more accurate evaluation of the classifier performance. However, it is computationally expensive and can be slow to run.\n",
     "\n",
     "The 10-fold and LOOCV results indicate a reliable classifier, with 10-fold offering a broader accuracy measure and LOOCV providing more detailed validation, however with higher computational demands."
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "54036a807a14e073"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "### Domain sensitivity"
-   ],
+   "id": "8cf29ef57f0f03dc",
    "metadata": {
     "collapsed": false
    },
-   "id": "8cf29ef57f0f03dc"
+   "source": [
+    "### Domain sensitivity"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "id": "5f67b2bb402e3769",
    "metadata": {
     "collapsed": false
    },
-   "id": "5f67b2bb402e3769"
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## References:\n",
+    "* Add 1 (Laplace) Smoothing: https://courses.engr.illinois.edu/cs447/fa2018/Slides/Lecture04.pdf"
+   ]
   }
  ],
  "metadata": {
